src/tui/snapshots/mudpuppy__tui__tests__diff_pane_focused_and_scrolled.snap
---
source: src/tui.rs
expression: screen(&term)
---
"┌ Files (7) ───────────────┐┌ src/long.rs [modified] 2/7 ──────────────────────────────────────────┐"
"│M src/alpha.rs  +3 -2     ││    3     3   line 03                                                 │"
"│M src/long.rs  +4 -2      ││    4     4   line 04                                                 │"
"│M README.md  +1 -1        ││    5     5   line 05                                                 │"
"│A src/new_module.rs  +3 -0││    6     6   line 06                                                 │"
"│D old.txt  +0 -2          ││    7     7   line 07                                                 │"
"│A assets/logo.png  +0 -0  ││    8     8   line 08                                                 │"
"│R src/relocated.rs  +0 -0 ││    9       - line 09 old                                             │"
"│                          ││          9 + line 09 new                                             │"
"│                          ││   10    10   line 10                                                 │"
"│                          ││   11    11   line 11                                                 │"
"│                          ││   12    12   line 12                                                 │"
"│                          ││   13    13   line 13                                                 │"
"│                          ││   14    14   line 14                                                 │"
"│                          ││   15    15   line 15                                                 │"
"│                          ││   16    16   line 16                                                 │"
"│                          ││   17    17   line 17                                                 │"
"│                          ││   18    18   line 18                                                 │"
"│                          ││         19 + line 19 added                                           │"
"│                          ││   19    20   line 20                                                 │"
"│                          ││@@ -40,2 +41,3 @@ fn far() {                                          │"
"│                          ││   40    41   far context                                             │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
" local vs main  ·  file 2/7  ·  +4 -2  ·  [diff] 50%  ? help  q quit                                "
