src/tui/snapshots/mudpuppy__tui__tests__help_overlay.snap
---
source: src/tui.rs
expression: screen(&term)
---
"┌ Files (7) ──────┌ Help ────────────────────────────────────────────────────────┐─────────────────┐"
"│M src/alpha.rs  +│mudpuppy — diff viewer                                        │                 │"
"│M src/long.rs  +4│Navigation                                                    │                 │"
"│M README.md  +1 -│  j / k        down / up (scroll diff, move file selection)   │                 │"
"│A src/new_module.│  Ctrl-d / -u  half page down / up                            │                 │"
"│D old.txt  +0 -2 │  Ctrl-f / -b  full page down / up                            │                 │"
"│A assets/logo.png│  g / G        top / bottom (or first / last file)            │                 │"
"│R src/relocated.r│  } / {        next / prev hunk   (also n / N)                │                 │"
"│                 │  J / K        next / prev file (from the diff pane)          │                 │"
"│                 │Focus                                                         │                 │"
"│                 │  Tab          switch between file tree and diff              │                 │"
"│                 │  l / Enter    file tree → diff                               │                 │"
"│                 │  h            diff → file tree                               │                 │"
"│                 │Annotations                                                   │                 │"
"│                 │  a            toggle the annotations panel                   │                 │"
"│                 │Turn                                                          │                 │"
"│                 │  r            release the turn; first release approves       │                 │"
"│                 │Files                                                         │                 │"
"│                 │  Ctrl-p       add any file (fuzzy picker)                    │                 │"
"│                 │Other                                                         │                 │"
"│                 │  ?            toggle this help                               │                 │"
"│                 │  q / Ctrl-c   quit                                           │                 │"
"└─────────────────│                                                              │─────────────────┘"
" local vs main  · └──────────────────────────────────────────────────────────────┘                  "
