src/tui/snapshots/mudpuppy__tui__tests__status_bar_shows_bottom.snap
---
source: src/tui.rs
expression: screen(&term)
---
"┌ Files (7) ───────────────┐┌ src/long.rs [modified] 2/7 ──────────────────────────────────────────┐"
"│M src/alpha.rs  +3 -2     ││    7     7   line 07                                                 │"
"│M src/long.rs  +4 -2      ││    8     8   line 08                                                 │"
"│M README.md  +1 -1        ││    9       - line 09 old                                             │"
"│A src/new_module.rs  +3 -0││          9 + line 09 new                                             │"
"│D old.txt  +0 -2          ││   10    10   line 10                                                 │"
"│A assets/logo.png  +0 -0  ││   11    11   line 11                                                 │"
"│R src/relocated.rs  +0 -0 ││   12    12   line 12                                                 │"
"│                          ││   13    13   line 13                                                 │"
"│                          ││   14    14   line 14                                                 │"
"│                          ││   15    15   line 15                                                 │"
"│                          ││   16    16   line 16                                                 │"
"│                          ││   17    17   line 17                                                 │"
"│                          ││   18    18   line 18                                                 │"
"│                          ││         19 + line 19 added                                           │"
"│                          ││   19    20   line 20                                                 │"
"│                          ││  ↕ 20 hidden lines — show more                                       │"
"│                          ││@@ -40,2 +41,3 @@ fn far() {                                          │"
"│                          ││   40    41   far context                                             │"
"│                          ││   41       - far old                                                 │"
"│                          ││         42 + far new                                                 │"
"│                          ││         43 + far extra                                               │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
" local vs main  ·  file 2/7  ·  +4 -2  ·  [diff] BOT  ? help  q quit                                "
