src/tui/snapshots/mudpuppy__tui__tests__synthetic_file_renders_in_tree_and_diff.snap
---
source: src/tui.rs
expression: screen(&term)
---
"┌ Files (8) ─────────┐┌ docs/notes.md [unchanged] 8/8  ●1 ─────────────────────┐"
"│M src/alpha.rs  +3 -││     1     1   # Notes                                  │"
"│M src/long.rs  +4 -2││●    2     2   first line                               │"
"│M README.md  +1 -1  ││     3     3   second line                              │"
"│A src/new_module.rs ││                                                        │"
"│D old.txt  +0 -2    ││                                                        │"
"│A assets/logo.png  +││                                                        │"
"│R src/relocated.rs  ││                                                        │"
"│· docs/notes.md  +0 ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"└────────────────────┘└────────────────────────────────────────────────────────┘"
" local vs main  ·  file 8/8  ·  +0 -0  ·  ● 1 (1 open)  ·  [tree] ALL  ? help  q"
